--- a/angular-sdk-example-backend/src/main/resources/application.properties
+++ b/angular-sdk-example-backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8888
 
-ehrbase.address=localhost
+ehrbase.address=34.87.152.198
 ehrbase.port=8080
 ehrbase.path=/ehrbase/rest/openehr/v1/
